plugins {
    id 'java'
    id'com.github.johnrengelman.shadow' version '5.2.0'
}

sourceCompatibility = 16
targetCompatibility = 16

group 'com.dynxsty.bot'

repositories {
    mavenCentral()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'

    implementation 'net.dv8tion:JDA:4.3.0_309'
    implementation 'org.mongodb:mongodb-driver:3.12.10'
    implementation 'com.google.code.gson:gson:2.8.7'
    implementation 'org.yaml:snakeyaml:1.29'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.5'
    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'

    // H2 Database
    implementation group: 'com.h2database', name: 'h2', version: '1.4.200'

    // Lombok Annotations
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
}

jar{
    manifest{ attributes("Manifest-Version": "1.0", "Main-Class": "com.javadiscord.javabot.Bot") }
}

tasks.withType(JavaCompile){ options.encoding = 'UTF-8'}
tasks.withType( JavaCompile ).configureEach {
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}
test { useJUnitPlatform() }
cd